# nrlmsis2.0

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg
cmake/: msis2.cmake
src/msis2/: CMakeLists.txt  __init__.py  msis2driver.f90
src/msis2/cmake/: msis2.cmake
src/msis2/tests/: test_module.py
