[metadata]
name = msis2
version = 0.9.0
description = Python API for Fortran NRLMSIS 2.0 neutral atmosphere model.
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/nrlmsis2.0
keywords =
  atmosphere
  geospace
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  python-dateutil
  numpy
  xarray
  geomagindices >= 1.3.0
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
